# Photon-Mamba2-LLM

./: .gitignore  Cargo.toml  LICENSE  README.md  README_JA.md  SUMMARY.md
.cargo/: config.toml
.github/workflows/: ci.yml
configs/: b44d_repro_5step.toml  b44d_validation_100step.toml  b51_t1024_ckpt_5step.toml  b51_t128_nockpt_5step.toml  b51_t2048_ckpt_3step.toml  b51_t512_ckpt_5step.toml  b51_t512_nockpt_1step.toml  b51_t512_nockpt_5step.toml  ckpt_smoke_cpu.toml  cuda_ckpt_sustainability_probe.toml  d1_alpha_smoke.toml  d2a_flat_smoke.toml  d2b_flat.toml  d2b_photon_a0.toml  d2b_photon_a03.toml  d4_flat.toml  d4_photon_a0.toml  flat_mamba_100m.toml  lr_sweep_1e-4.toml  lr_sweep_1e-4_500.toml  lr_sweep_1e-4_500_ckpt.toml  lr_sweep_3e-4.toml  lr_sweep_3e-5.toml  mem12gb_ckpt_t768_smoke.toml  mem12gb_cuda_smoke_t512.toml  overnight_14h.toml  photon_mamba_100m.toml  probe_batch_size.toml  probe_t256_b2.toml  realtext_2h.toml  realtext_diagnose_batch8.toml  realtext_overnight_14h.toml  realtext_overnight_lr1e-4.toml  realtext_smoke.toml  smoke_gpu.toml  smoke_overnight_test.toml  smoke_tiny.toml
crates/pm-backend/: Cargo.toml
crates/pm-backend/src/: backend.rs  device.rs  lib.rs
crates/pm-candle/: Cargo.toml
crates/pm-candle/examples/: smoke.rs
crates/pm-candle/src/: backend.rs  dtype.rs  error.rs  lib.rs  ops_impl.rs  param.rs  tensor.rs
crates/pm-candle/tests/: bf16_mixed_precision.rs  bf16_mixed_precision_cuda.rs  checkpoint_grad_parity.rs  decode_state.rs  flat_mamba.rs  fused_cross_entropy.rs  mamba2_block.rs  nn_basics.rs  photon_decoder.rs  photon_embedding.rs  photon_hierarchy.rs  photon_model.rs  photon_projections.rs  photon_stacks.rs  rmsnorm_backward.rs
crates/pm-cli/: Cargo.toml
crates/pm-cli/src/: config.rs  eval_cmd.rs  generate_cmd.rs  main.rs  model_build.rs  train_cmd.rs
crates/pm-cli/tests/: backend_parity.rs  decode_vram_flat.rs
crates/pm-core/: Cargo.toml
crates/pm-core/src/: checkpoint.rs  dtype.rs  flat.rs  lib.rs  loss.rs  model.rs  module.rs  ops.rs  param.rs  shape.rs  tensor.rs
crates/pm-core/src/mamba2/: block.rs  mod.rs  ssd.rs  ssd_ops.rs  state.rs
crates/pm-core/src/nn/: embedding.rs  linear.rs  mod.rs
crates/pm-core/src/photon/: chunker.rs  converter.rs  decode_state.rs  decoder.rs  embedding.rs  encoder.rs  hierarchical_decoder.rs  hierarchical_encoder.rs  mod.rs
crates/pm-core/tests/: ssd_fixture.rs
crates/pm-cuda/: Cargo.toml  build.rs
crates/pm-cuda/examples/: bench_ssd.rs  diag_occupancy.rs  op_profile.rs  smoke.rs
crates/pm-cuda/kernel/: Cargo.toml  rust-toolchain.toml
crates/pm-cuda/kernel/.cargo/: config.toml
crates/pm-cuda/kernel/src/: lib.rs
crates/pm-cuda/src/: error.rs  lib.rs  module.rs  profiler.rs  ptx.rs  ssd.rs
crates/pm-cuda/src/backend/: backend_impl.rs  grad.rs  kernels.rs  mod.rs  ops_impl.rs  param.rs  tape.rs  tensor.rs
crates/pm-cuda/tests/: b44f_investigation.rs  b44f_op_parity_prod_shape.rs  b44f_t5_block_fd_grad.rs  b53_mul_narrow_bwd.rs  backend_basic.rs  checkpoint_grad_parity.rs  conv1d_depthwise_bwd_gpu.rs  fused_cross_entropy.rs  grad_algebra.rs  grad_basic.rs  grad_e2e.rs  grad_ssd.rs  matmul_broadcast.rs  matmul_broadcast_direct.rs  matmul_probe.rs  no_grad_scope.rs  oom_regression.rs  ops_complex.rs  ops_elementwise.rs  ops_matmul.rs  ops_reduce.rs  ops_shape.rs  profiler_smoke.rs  rmsnorm_backward_geometry.rs  ssd_parity.rs  sum_all_device_reduce.rs
crates/pm-data/: Cargo.toml
crates/pm-data/examples/: inspect_batches.rs
crates/pm-data/src/: lib.rs  packing.rs  text_source.rs
crates/pm-data/tests/: packing.rs
crates/pm-infer/: Cargo.toml
crates/pm-infer/src/: eval.rs  generator.rs  lib.rs  sampling.rs
crates/pm-infer/tests/: generator_smoke.rs  stateful_generator_parity.rs
crates/pm-tokenizer/: Cargo.toml
crates/pm-tokenizer/src/: lib.rs
crates/pm-train/: Cargo.toml
crates/pm-train/src/: checkpoint.rs  clip.rs  lib.rs  loss.rs  optim.rs  trainer.rs
crates/pm-train/tests/: checkpoint_roundtrip.rs  fused_cross_entropy_injection.rs  grad_clip.rs  recursive_consistency_wiring.rs  toy_training.rs
reference/: gen_fixtures.py  mamba2_ref.py
reference/fixtures/ssd_q64/: A.npy  B.npy  C.npy  X.npy  Y.npy  final_state.npy  meta.txt
scripts/: check_pm_core_deps.sh  d2b_chain.sh  d4_chain.sh  stream_fineweb.py
